--- a/index.html
+++ b/index.html
@@ -1,1 +1,224 @@
-Hello World
+<!DOCTYPE HTML>
+
+<html>
+	<head>
+		<title>Out of Bounds | The party game that invites you to be as obscene as you'd like</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="HandheldFriendly" content="true" />
+		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
+		<meta name="keywords" content="drinking party card cards game games kickstarter horrible adult dank memes" />
+		<meta name="viewport" content"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/skel-layers.min.js"></script>
+		<script src="js/init.js"></script>
+		
+		<!-- Kissmetrics tracking snippet -->
+        <script type="text/javascript">var _kmq = _kmq || [];
+        var _kmk = _kmk || '6c841f457a4b5e5da05ff0dd17bd22d3d6682700';
+        function _kms(u){
+          setTimeout(function(){
+            var d = document, f = d.getElementsByTagName('script')[0],
+            s = d.createElement('script');
+            s.type = 'text/javascript'; s.async = true; s.src = u;
+            f.parentNode.insertBefore(s, f);
+          }, 1);
+        }
+        _kms('//i.kissmetrics.com/i.js');
+        _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
+        </script>
+        
+		<!-- Google ANalytics -->
+		<script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-66154751-1', 'auto');
+          ga('send', 'pageview');
+        </script>
+
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+
+	<body class="homepage">
+
+		<!-- Header -->
+			<div id="header-wrapper">
+				<div id="header" class="container">
+
+					<!-- Logo -->
+						<h1 id="logo"><a href="index.html">Out of Bounds</a></h1>
+
+
+					 <!-- Nav --> 
+						<nav id="nav">
+							<ul>
+								<li><a href="about.html">About</a></li>
+								<li><a href="#contact">Contact</a></li>
+								<li class="break"><a href="blog.html">Blog</a></li>
+								<li><a href="https://shop.trycelery.com/page/55ca43852b47b30300d95cd7" data-celery="55ca43852b47b30300d95cd7" data-celery-version="v2">Pre-Order Now</a></li>
+							</ul>
+						</nav>
+
+
+				</div>
+
+				<!-- Hero -->
+					<section id="hero" class="container">
+						<header>
+							<h2 id="hero-text">The party game that invites you <br />to be as obscene as you'd like</h2>
+						</header>
+						<p id= "hero-text">Coming soon. Pre-order yours on Kickstarter today <br /> at an early-bird price!</p>
+						<ul class="actions">
+							<li><a href="http://kickstarter.com" class="button">Kickstarter Campaign</a></li>
+						</ul>
+					</section>
+
+			</div>
+
+		<!-- Features 1 -->
+			<div class="wrapper">
+				<div class="container">
+					<div class="row">
+						<section class="6u 12u(narrower) feature">
+							<div class="image-wrapper first">
+								<a href="http://kickstarter.com" class="image featured first"><img src="images/double-sided.jpg" alt="" /></a>
+							</div>
+							<header>
+								<h2>Double-sided
+								</h2>
+							</header>
+							<p>So you can have the most fun in one card.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">I just can't wait to be king</a></li>
+							</ul>
+						</section>
+						<section class="6u 12u(narrower) feature">
+							<div class="image-wrapper">
+								<a href="http://kickstarter.com" class="image featured"><img src="images/charades.jpg" alt="" /></a>
+							</div>
+							<header>
+								<h2>Act it out!</h2>
+							</header>
+							<p>Words are hard. Act it out if necessary!</p>
+							<ul class="actions">
+								<li><a href="http://kickstarter.com" class="button">You know you want it</a></li>
+							</ul>
+						</section>
+					</div>
+				</div>
+			</div>
+
+		<!-- Promo -->
+			<div id="promo-wrapper">
+				<section id="promo">
+					<h2 id="hero-text">If you're still reading, you must hate yourself.</h2>
+					<a href="http://kickstarter.com" class="button">Reserve your set</a>
+				</section>
+			</div>
+
+		<!-- Features 2 -->
+			<div class="wrapper">
+				<section class="container">
+					<header class="major">
+						<h2>Still not convinced?</h2>
+						<p>Here are some reviews:</p>
+					</header>
+					<div class="row features">
+						<section class="4u 12u(narrower) feature">
+							<div class="image-wrapper first">
+								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							</div>
+							<h3>Jenny 8675309:</h3> <br /><br />
+							<p>It's such a game.</p>
+						</section>
+						<section class="4u 12u(narrower) feature">
+							<div class="image-wrapper">
+								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+							</div>
+							<h3>DJ Roomba</h3> <br /><br />
+							<p>Treat yo 'self.</p>
+						</section>
+						<section class="4u 12u(narrower) feature">
+							<div class="image-wrapper">
+								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							</div>
+							<h3>Jake from State Farm</h3> <br /><br />
+							<p>This game really inspired me to continue wearing khakis in the workplace. </p>
+						</section>
+					</div>
+					<ul class="actions major">
+						<li><a href="#" class="button">Just buy it already...</a></li>
+					</ul>
+				</section>
+			</div>
+
+		<!-- Footer -->
+			<div id="footer-wrapper">
+				<div id="footer" class="container">
+					<header class="major">
+						<h2>We're done convincing you</h2>
+                        <p>Leave now. We're completely done with you.</p>
+					</header>
+				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
+					<div class="row">
+						<section class="6u 12u(narrower)">
+							<form action="//formspree.io/andrew@mantiscustoms.com" method="POST">
+								<div class="row 50%">
+									<div class="6u 12u(mobile)">
+										<input name="name" placeholder="Name" type="text" required />
+									</div>
+									<div class="6u 12u(mobile)">
+										<input name="_replyto" placeholder="Email" type="text" required />
+									</div>
+								</div>
+								<div class="row 50%">
+									<div class="12u">
+										<textarea name="message" placeholder="Message" required></textarea>
+									</div>
+								</div>
+								<div class="row 50%">
+									<div class="12u">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="reset" value="Clear form" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</section>
+						<section class="6u 12u(narrower)">
+							<div class="row 0%">
+								<ul class="divided icons 6u 12u(mobile)">
+									<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
+									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/"><span class="extra">facebook.com/</span>Facebook Page</a></li>
+								</ul>
+								<ul class="divided icons 6u 12u(mobile)">
+									<li class="icon fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
+									<li class="icon fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
+
+								</ul>
+							</div>
+						</section>
+					</div>
+				</div>
+				<div id="copyright" class="container">
+					<ul class="menu">
+						<li>&copy;2015 Out of Bounds. All rights reserved.</li>
+					</ul>
+				</div>
+			</div>
+
+	</body>
+</html>
