--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </script>
 
 		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="skel.css" />
+			<link rel="stylesheet" href="style.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
