--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
-		<meta name="keywords" content="drinking party card cards game games kickstarter horrible adult dank memes" />
+		<meta name="keywords" content="buy party card cards game games kickstarter horrible adult dank memes" />
 		<meta name="viewport" content"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
@@ -70,122 +70,106 @@
 								<li><a href="https://shop.trycelery.com/page/55ca43852b47b30300d95cd7" data-celery="55ca43852b47b30300d95cd7" data-celery-version="v2">Pre-Order Now</a></li>
 							</ul>
 						</nav>
-
-
-				</div>
-
-				<!-- Hero -->
-					<section id="hero" class="container">
-						<header>
-							<h2 id="hero-text">The party game that invites you <br />to be as obscene as you'd like</h2>
-						</header>
-						<p id= "hero-text">Coming soon. Pre-order yours on Kickstarter today <br /> at an early-bird price!</p>
-						<ul class="actions">
-							<li><a href="http://kickstarter.com" class="button">Kickstarter Campaign</a></li>
-						</ul>
-					</section>
-
-			</div>
-
-		<!-- Features 1 -->
-			<div class="wrapper">
-				<div class="container">
-					<div class="row">
-						<section class="6u 12u(narrower) feature">
-							<div class="image-wrapper first">
-								<a href="http://kickstarter.com" class="image featured first"><img src="images/double-sided.jpg" alt="" /></a>
-							</div>
-							<header>
-								<h2>Double-sided
-								</h2>
-							</header>
-							<p>So you can have the most fun in one card.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">I just can't wait to be king</a></li>
-							</ul>
-						</section>
-						<section class="6u 12u(narrower) feature">
-							<div class="image-wrapper">
-								<a href="http://kickstarter.com" class="image featured"><img src="images/charades.jpg" alt="" /></a>
-							</div>
-							<header>
-								<h2>Act it out!</h2>
-							</header>
-							<p>Words are hard. Act it out if necessary!</p>
-							<ul class="actions">
-								<li><a href="http://kickstarter.com" class="button">You know you want it</a></li>
-							</ul>
-						</section>
-					</div>
 				</div>
 			</div>
 
-		<!-- Promo -->
-			<div id="promo-wrapper">
-				<section id="promo">
-					<h2 id="hero-text">If you're still reading, you must hate yourself.</h2>
-					<a href="http://kickstarter.com" class="button">Reserve your set</a>
-				</section>
-			</div>
-
-		<!-- Features 2 -->
+		<!-- Main -->
 			<div class="wrapper">
-				<section class="container">
-					<header class="major">
-						<h2>Still not convinced?</h2>
-						<p>Here are some reviews:</p>
-					</header>
+				<div class="container" id="main">
+
+					<!-- Content -->
+						<article id="content">
+							<header>
+								<h2>No Sidebar</h2>
+								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit
+								dolor neque semper.</p>
+							</header>
+							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+							<p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien
+							mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
+							condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
+							ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
+							eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
+							turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
+							Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
+							<p>Mauris eleifend eleifend felis aliquet ornare. Vestibulum porta velit at elementum
+							gravida nibh eget, volutpat odio. Proin rhoncus, sapien
+							mollis luctus hendrerit, orci dui viverra metus, et cursus nulla mi sed elit. Vestibulum
+							condimentum, mauris a mattis vestibulum, urna mauris cursus lorem, eu fringilla lacus
+							ante non est. Nullam vitae feugiat libero, eu consequat sem. Proin tincidunt neque
+							eros. Duis faucibus blandit ligula, mollis commodo risus sodales at. Sed rutrum et
+							turpis vel blandit. Nullam ornare congue massa, at commodo nunc venenatis varius.
+							Praesent mollis nisi at vestibulum aliquet. Sed sagittis congue urna ac consectetur.</p>
+							<p>Vestibulum pellentesque posuere lorem non aliquam. Mauris eleifend eleifend
+							felis aliquet ornare. Vestibulum porta velit at elementum elementum.</p>
+						</article>
+
 					<div class="row features">
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper first">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
-							<h3>Jenny 8675309:</h3> <br /><br />
-							<p>It's such a game.</p>
+							<header>
+								<h3>Dolor sit consequat magna</h3>
+							</header>
+							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
+							vel sem sit dolor neque semper magna lorem ipsum.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">Vivamus in elementum</a></li>
+							</ul>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
-							<h3>DJ Roomba</h3> <br /><br />
-							<p>Treat yo 'self.</p>
+							<header>
+								<h3>Dolor sit consequat magna</h3>
+							</header>
+							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
+							vel sem sit dolor neque semper magna lorem ipsum.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">Vivamus in elementum</a></li>
+							</ul>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
-							<h3>Jake from State Farm</h3> <br /><br />
-							<p>This game really inspired me to continue wearing khakis in the workplace. </p>
+							<header>
+								<h3>Dolor sit consequat magna</h3>
+							</header>
+							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
+							vel sem sit dolor neque semper magna lorem ipsum.</p>
+							<ul class="actions">
+								<li><a href="#" class="button">Vivamus in elementum</a></li>
+							</ul>
 						</section>
 					</div>
-					<ul class="actions major">
-						<li><a href="#" class="button">Just buy it already...</a></li>
-					</ul>
-				</section>
+				</div>
 			</div>
 
 		<!-- Footer -->
 			<div id="footer-wrapper">
 				<div id="footer" class="container">
 					<header class="major">
-						<h2>We're done convincing you</h2>
-                        <p>Leave now. We're completely done with you.</p>
+						<h2>Euismod aliquam vehicula lorem</h2>
+						<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br />
+						dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</p>
 					</header>
-				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
-					<div class="row">
+					<div class="row" id="contact">
 						<section class="6u 12u(narrower)">
-							<form action="//formspree.io/andrew@mantiscustoms.com" method="POST">
+							<form method="post" action="#">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)">
-										<input name="name" placeholder="Name" type="text" required />
+										<input name="name" placeholder="Name" type="text" />
 									</div>
 									<div class="6u 12u(mobile)">
-										<input name="_replyto" placeholder="Email" type="text" required />
+										<input name="email" placeholder="Email" type="text" />
 									</div>
 								</div>
 								<div class="row 50%">
 									<div class="12u">
-										<textarea name="message" placeholder="Message" required></textarea>
+										<textarea name="message" placeholder="Message"></textarea>
 									</div>
 								</div>
 								<div class="row 50%">
@@ -202,12 +186,13 @@
 							<div class="row 0%">
 								<ul class="divided icons 6u 12u(mobile)">
 									<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
-									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/"><span class="extra">facebook.com/</span>Facebook Page</a></li>
+									<li class="icon fa-facebook"><a href="#"><span class="extra">facebook.com/</span>untitled</a></li>
+									<li class="icon fa-dribbble"><a href="#"><span class="extra">dribbble.com/</span>untitled</a></li>
 								</ul>
 								<ul class="divided icons 6u 12u(mobile)">
 									<li class="icon fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
 									<li class="icon fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
-
+									<li class="icon fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
 								</ul>
 							</div>
 						</section>
@@ -215,7 +200,7 @@
 				</div>
 				<div id="copyright" class="container">
 					<ul class="menu">
-						<li>&copy;2015 Out of Bounds. All rights reserved.</li>
+						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
 				</div>
 			</div>
