--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
-		<meta name="keywords" content="drinking party card cards game games kickstarter horrible adult dank memes" />
+		<meta name="keywords" content="buy party card cards game games kickstarter horrible adult dank memes steel beams" />
 		<meta name="viewport" content"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
