--- a/about.html
+++ b/about.html
@@ -114,9 +114,6 @@
 								<h3>Adam Rapfogel</h3> <br> <h4><i>Tufts University</i></h4>
 							</header>
 							<p>A current freshman, Adam is awfully full of himself. He's the guy who spends time chuckling at the descriptions he writes (including this one) and tries to act like he's way older than 18. He's also super into Freud for some reason.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Vivamus in elementum</a></li>
-							</ul>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
@@ -126,22 +123,15 @@
 								<h3>Andrew Wong</h3> <br> <h4><i>Johns Hopkins University</i></h4>
 							</header>
 							<p>Also a current freshman, Andy is the tech guy. He knows his way around Photoshop and Illustrator like nobody's business, and he's also a total ladies man.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Vivamus in elementum</a></li>
-							</ul>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Austin Chen</h3>
+								<h3>Austin Chen</h3> <br> <h4><i>New York University</i></h4>
 							</header>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-							vel sem sit dolor neque semper magna lorem ipsum.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Vivamus in elementum</a></li>
-							</ul>
+							<p>Austin is also a current freshman, but nobody really likes him, so don't worry too much about him.</p>
 						</section>
 					</div>
 					<div class="row features">
@@ -150,26 +140,18 @@
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Zach Canelos</h3>
+								<h3>Zach Canelos</h3> <br> <h4><i>Fordham University</i></h4>
 							</header>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-							vel sem sit dolor neque semper magna lorem ipsum.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Vivamus in elementum</a></li>
-							</ul>
+							<p>Yet another current frosh, Zach is a real straight shooter. You wouldn't know it upon meeting him, but he's really got a knack for developing this sort of game.</p>
 						</section>
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Yanal Matari</h3>
+								<h3>Yanal Matari</h3> <br> <h4><i>New York University</i></h4>
 							</header>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-							vel sem sit dolor neque semper magna lorem ipsum.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Vivamus in elementum</a></li>
-							</ul>
+							<p>Another freshman, Yanal is basically our target audience. He's made suggestions which were too over the top for us to include in this very explicit game, and he's enjoyed the process of putting this all together almost too much.</p>
 						</section>
 					</div>
 				</div>
