more small deets

--- a/about.html
+++ b/about.html
@@ -60,14 +60,13 @@
 					<!-- Logo -->
 						<h1 id="logo"><a href="index.html">Out of Bounds</a></h1>
 
-
 					 <!-- Nav --> 
 						<nav id="nav">
 							<ul>
 								<li><a href="about.html">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li class="break"><a href="blog.html">Blog</a></li>
-								<li><a href="http://kck.st/1DCX9o1" data-celery-version="v2">Pre-Order Now</a></li>
+								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
 								
 							</ul>
 						</nav>
@@ -100,11 +99,9 @@
                             <p>If the clue-giver is having difficulty with a word, he or she may skip it for a 10 second penalty, though the word they skipped will not count toward the 3 required to complete each round. Saying one of the prohibited words carries a similar 10 second penalty, and we recommend that one player on an opposing team keep an eye on the clue-giver to ensure that none of the forbidden words are used. </p>
 						</article>
 						<article id="content">
-                            <h2>Our Team</h2>
-                            <a href="cats.com"><h3>Cheney</h3></a>
-						    
+                            <h2>Our Team</h2>						    
 						</article>
-
+					<!-- Team Profiles -->
 					<div class="row features">
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper first">
