--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li class="break"><a href="blog.html">Blog</a></li>
-								<li><a href="https://shop.trycelery.com/page/55ca43852b47b30300d95cd7" data-celery="55ca43852b47b30300d95cd7" data-celery-version="v2">Pre-Order Now</a></li>
+								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
 							</ul>
 						</nav>
 				</div>
@@ -80,9 +80,8 @@
 					<!-- Content -->
 						<article id="content">
 							<header>
-								<h2>No Sidebar</h2>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit
-								dolor neque semper.</p>
+								<h2>Welcome to Out of Bounds!</h2>
+								<p>A quick preview of what's to come...</p>
 							</header>
 							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 							<p>Ut sed tortor luctus, gravida nibh eget, volutpat odio. Proin rhoncus, sapien
