--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li class="break"><a href="blog.html">Blog</a></li>
-								<li><a href="https://shop.trycelery.com/page/55ca43852b47b30300d95cd7" data-celery="55ca43852b47b30300d95cd7" data-celery-version="v2">Pre-Order Now</a></li>
+								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
 							</ul>
 						</nav>
 
