--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</section>
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="http://kickstarter.com" class="image featured"><img src="images/charades.jpg" alt="" /></a>
+								<a href="http://kickstarter.com" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h2>Act it out!</h2>
