--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						</header>
 						<p id= "hero-text">Coming soon. Pre-order yours on Kickstarter today <br /> at an early-bird price!</p>
 						<ul class="actions">
-							<li><a href="http://kickstarter.com" class="button">Kickstarter Campaign</a></li>
+							<li><a href="http://kck.st/1DCX9o1" class="button">Kickstarter Campaign</a></li>
 						</ul>
 					</section>
 
@@ -106,14 +106,14 @@
 						</section>
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="http://kickstarter.com" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h2>Act it out!</h2>
 							</header>
 							<p>Words are hard. Act it out if necessary!</p>
 							<ul class="actions">
-								<li><a href="http://kickstarter.com" class="button">You know you want it</a></li>
+								<li><a href="http://kck.st/1DCX9o1" class="button">You know you want it</a></li>
 							</ul>
 						</section>
 					</div>
@@ -124,7 +124,7 @@
 			<div id="promo-wrapper">
 				<section id="promo">
 					<h2 id="hero-text">If you're still reading, you must hate yourself.</h2>
-					<a href="http://kickstarter.com" class="button">Reserve your set</a>
+					<a href="http://kck.st/1DCX9o1" class="button">Reserve your set</a>
 				</section>
 			</div>
 
@@ -140,26 +140,26 @@
 							<div class="image-wrapper first">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
-							<h3>Jenny 8675309:</h3> <br /><br />
-							<p>It's such a game.</p>
+							<h3>Blog Person 1</h3> <br /><br />
+							<p>It's such a game. </p>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
-							<h3>DJ Roomba</h3> <br /><br />
-							<p>Treat yo 'self.</p>
+							<h3>Blog Person 2</h3> <br /><br />
+							<p>It's a great game, treat yo 'self.</p>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
 							<h3>Jake from State Farm</h3> <br /><br />
 							<p>This game really inspired me to continue wearing khakis in the workplace. </p>
 						</section>
 					</div>
 					<ul class="actions major">
-						<li><a href="#" class="button">Just buy it already...</a></li>
+						<li><a href="http://kck.st/1DCX9o1" class="button">Just buy it already...</a></li>
 					</ul>
 				</section>
 			</div>
