--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Out of Bounds | The party game that invites you to be as obscene as you'd like</title>
+		<title>Out of Bounds | Game Rules and About Us</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
