--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Out of Bounds | Game Rules and About Us</title>
+		<title>Out of Bounds | Game Rules and Team</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
@@ -83,7 +83,7 @@
 							<header>
 								<h2>Game Rules</h2>
 							</header>
-							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="rules" /></a>
+							<a href="#" class="image featured"><img src="images/how-to.andrewjpg" alt="rules" /></a>
 							<p>While we recommend setting aside at least 15 minutes to play, games can last as short as 5 minutes and as long as several decades. Out of Bounds is a card game designed for groups of 4 or more people, split up evenly into two or more teams.</p>
 
                             <p>Each team has two roles to fill: the clue-giver and the guesser(s). The clue-giver uses words, gestures, or even complete sentences to try to get the guessers on his or her team to determine the word atop each card. In the process, nothing is off limits except for the five prohibited words listed below. The word atop each card is called the "secret word," and the words underneath are "out of bounds."</p>
@@ -114,7 +114,7 @@
 						</section>
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/andrew.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h3>Andrew Wong</h3> <h5><i>Johns Hopkins University</i></h5>
