--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 					<div class="row features">
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper first">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/adam.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h3>Adam Rapfogel</h3> <h5><i>Tufts University</i></h5>
