whoops faulty hyperlink

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 							<header>
 								<h2>Game Rules</h2>
 							</header>
-							<a href="#" class="image featured"><img src="images/how-to.andrewjpg" alt="rules" /></a>
+							<a href="#" class="image featured"><img src="images/how-to.jpg" alt="rules" /></a>
 							<p>While we recommend setting aside at least 15 minutes to play, games can last as short as 5 minutes and as long as several decades. Out of Bounds is a card game designed for groups of 4 or more people, split up evenly into two or more teams.</p>
 
                             <p>Each team has two roles to fill: the clue-giver and the guesser(s). The clue-giver uses words, gestures, or even complete sentences to try to get the guessers on his or her team to determine the word atop each card. In the process, nothing is off limits except for the five prohibited words listed below. The word atop each card is called the "secret word," and the words underneath are "out of bounds."</p>
