--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<ul>
 								<li><a href="about.html">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li class="break"><a href="blog.html">Blog</a></li>
+								<li class="break"><a href="rules.html">Rules</a></li>
 								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
 							</ul>
 						</nav>
@@ -174,7 +174,7 @@
 				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 					<div class="row">
 						<section class="6u 12u(narrower)">
-							<form action="//formspree.io/andrew@mantiscustoms.com" method="POST">
+							<form action="#" method="POST">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)">
 										<input name="name" placeholder="Name" type="text" required />
@@ -202,12 +202,7 @@
 							<div class="row 0%">
 								<ul class="divided icons 6u 12u(mobile)">
 									<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
-									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/"><span class="extra">facebook.com/</span>Facebook Page</a></li>
-								</ul>
-								<ul class="divided icons 6u 12u(mobile)">
-									<li class="icon fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
-									<li class="icon fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
-
+									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/">Facebook Page</a></li>
 								</ul>
 							</div>
 						</section>
