--- a/about.html
+++ b/about.html
@@ -175,6 +175,14 @@
 								</ul>
 							</div>
 						</section>
+						<section class="6u 12u(narrower)">
+							<div class="row 0%">
+								<ul class="divided icons 6u 12u(mobile)">
+									<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
+									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/">Facebook Page</a></li>
+								</ul>
+							</div>
+						</section>
 					</div>
 				</div>
 				<div id="copyright" class="container">
