--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 							</form>
 						</section>
 						<section class="6u 12u(narrower)">
-							<div class="row 0%">
+							<div class="row 50%">
 								<ul class="divided icons 6u 12u(mobile)">
-									<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
+									<li class="icon fa-twitter"><a href="#"><span class="extra">Twitter</a></li>
 									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/">Facebook Page</a></li>
 								</ul>
 							</div>
