--- a/rules.html
+++ b/rules.html
@@ -77,17 +77,6 @@
 			<div class="wrapper">
 				<div class="container" id="main">
 
-					<!-- Content -->
-						<article id="content">
-							<header>
-								<h2>Welcome to Out of Bounds!</h2>
-								<p>A quick preview of what's to come...</p>
-							</header>
-							<p>Welcome to our website! We're so excited to show you our product.</p>
-							<p>Our team has been working tirelessly since July to create the most offensive game you've ever played. We can't wait for you to enjoy it with us.</p>
-							<p>Without further ado...we present the rules.</p>
-						</article>
-
 					<!-- Rules -->
 						<article id="content">
 							<header>
@@ -145,6 +134,14 @@
 									</div>
 								</div>
 							</form>
+						</section>
+						<section class="6u 12u(narrower)">
+							<div class="row 0%">
+								<ul class="divided icons 6u 12u(mobile)">
+									<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
+									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/">Facebook Page</a></li>
+								</ul>
+							</div>
 						</section>
 						<section class="6u 12u(narrower)">
 							<div class="row 0%">
