--- a/rules.html
+++ b/rules.html
@@ -110,7 +110,7 @@
 					</header>
 				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 					<div class="row">
-						<section class="6u 12u(narrower)">
+						<section class="12u">
 							<form action="#" method="POST">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)">
@@ -135,14 +135,7 @@
 								</div>
 							</form>
 						</section>
-						<section class="6u 12u(narrower)">
-							<div class="row 0%">
-								<ul class="divided icons 6u 12u(mobile)">
-									<li class="icon fa-twitter"><a href="#"><span class="extra">Twitter</a></li>
-									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/">Facebook Page</a></li>
-								</ul>
-							</div>
-						</section>
+
 						
 					</div>
 				</div>
