--- a/rules.html
+++ b/rules.html
@@ -110,7 +110,7 @@
 					</header>
 				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 					<div class="row">
-						<section class="12u">
+						<section class="6u -6u">
 							<form action="#" method="POST">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)">
