--- a/rules.html
+++ b/rules.html
@@ -110,7 +110,7 @@
 					</header>
 				    
 					<div class="row">
-						<section class="-2u 6u -2u">
+						<section class="-2u 6u -2u 12u(narrower)">
 						    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 							<form action="#" method="POST">
 								<div class="row 50%">
