--- a/rules.html
+++ b/rules.html
@@ -108,10 +108,9 @@
 						<h2>We're done convincing you</h2>
                         <p>Leave now. We're completely done with you.</p>
 					</header>
-				    
+				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 					<div class="row">
-						<section class="-2u 6u -2u 12u(narrower)">
-						    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
+						<section class="6u 12u(narrower)">
 							<form action="#" method="POST">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)">
